--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  # firebase_core: ^1.12.0 -> firebase_core: ^1.13.1
+  # cloud_firestore: ^3.1.8 -> cloud_firestore: ^3.1.10
+  # firebase_analytics: ^9.1.0 -> firebase_analytics: ^9.1.2
+
+  firebase_core: ^1.14.1
+  # firebase_analytics: ^9.1.2
+  cloud_firestore: ^3.1.12
+
+  # firebase_core:
+  # cloud_firestore:
 
 dev_dependencies:
   flutter_test:
